--- a/app/src/main/res/layout/item_histo.xml
+++ b/app/src/main/res/layout/item_histo.xml
@@ -10,10 +10,17 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/itemCalc"
+            android:id="@+id/itemId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:visibility="invisible" />
+
+        <TextView
+        android:id="@+id/itemCalc"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp" />
 
         <TextView
             android:id="@+id/itemResult"
@@ -28,6 +35,7 @@
             style="@android:style/Widget.ImageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/todo"
             android:focusable="auto"
             android:onClick="btnDelete"
             android:tint="@android:color/holo_blue_dark"
