--- a/app/src/main/res/layout/activity_histo.xml
+++ b/app/src/main/res/layout/activity_histo.xml
@@ -16,7 +16,7 @@
         app:title="@string/historique" />
 
 
-    <ListView
+    <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/histo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
