--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,18 @@
         app:layout_constraintWidth_percent="0.30" />
 
     <ImageButton
+        android:id="@+id/imageButton"
+        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="btnCam"
+        android:tint="@android:color/holo_blue_dark"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPour"
+        app:layout_constraintLeft_toRightOf="@+id/buttonGraph"
+        app:layout_constraintRight_toLeftOf="@+id/buttonDelete"
+        app:srcCompat="@android:drawable/ic_menu_camera" />
+
+    <ImageButton
         android:id="@+id/buttonDelete"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
