--- a/app/src/main/res/layout-land/activity_histo.xml
+++ b/app/src/main/res/layout-land/activity_histo.xml
@@ -16,7 +16,7 @@
         app:title="@string/historique" />
 
 
-    <ListView
+    <com.baoyz.swipemenulistview.SwipeMenuListView
         android:id="@+id/histo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -24,4 +24,5 @@
         android:longClickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
+
 </android.support.constraint.ConstraintLayout>
