--- a/app/src/main/res/layout-land-v21/activity_main.xml
+++ b/app/src/main/res/layout-land-v21/activity_main.xml
@@ -8,15 +8,16 @@
     android:theme="@style/AppTheme"
     tools:context=".MainActivity">
 
-    <TextView
+    <EditText
         android:id="@+id/textCalc"
+        style="@style/Widget.AppCompat.EditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="13dp"
+        android:layout_marginRight="13dp"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
