--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -12,18 +12,19 @@
         android:id="@+id/textCalc"
         style="@style/Widget.AppCompat.AutoCompleteTextView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="top"
+        android:text="@string/calc"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:text="@string/calc"
+        app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/guideline7" />
 
     <TextView
         android:id="@+id/textResult"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="right"
         android:paddingRight="32dp"
         android:text="@string/result"
@@ -31,6 +32,7 @@
         android:textStyle="bold|italic"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -38,12 +40,13 @@
         android:id="@+id/buttonHisto"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:onClick="btnHisto"
         android:text="@string/historique"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/buttonC"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.30" />
 
@@ -51,12 +54,13 @@
         android:id="@+id/buttonGraph"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:onClick="btnGraph"
         android:text="@string/graphique"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/buttonPar"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonHisto"
         app:layout_constraintWidth_percent="0.30" />
 
@@ -64,10 +68,11 @@
         android:id="@+id/btnVoice"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnVoice"
         android:tint="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonPour"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonGraph"
         app:layout_constraintRight_toLeftOf="@+id/btnCamera"
         app:layout_constraintWidth_percent="0.10"
@@ -77,10 +82,11 @@
         android:id="@+id/btnCamera"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnCam"
         android:tint="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonPour"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/btnVoice"
         app:layout_constraintRight_toLeftOf="@+id/buttonDelete"
         app:layout_constraintWidth_percent="0.10"
@@ -90,10 +96,11 @@
         android:id="@+id/buttonDelete"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:longClickable="false"
         android:tint="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.20"
         app:srcCompat="@android:drawable/ic_input_delete" />
@@ -103,12 +110,13 @@
         android:id="@+id/buttonC"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginLeft="2dp"
         android:onClick="btnC"
         android:text="@string/c"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -116,23 +124,25 @@
         android:id="@+id/buttonPar"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:onClick="btnPar"
         android:text="@string/para"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonC"
-        app:layout_constraintWidth_percent="0.25" />
+        app:layout_constraintWidth_percent="0.25"
+        android:layout_height="0dp" />
 
     <Button
         android:id="@+id/buttonPour"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPour"
         android:text="@string/pou"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/button9"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonPar"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -140,11 +150,12 @@
         android:id="@+id/buttonDiv"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnDiv"
         android:text="@string/div"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonMul"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonPour"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
@@ -153,10 +164,11 @@
         android:id="@+id/button8"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn8"
         android:text="@string/_8"
         app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button7"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -164,10 +176,11 @@
         android:id="@+id/button6"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn6"
         android:text="@string/_6"
         app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button5"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -175,10 +188,11 @@
         android:id="@+id/buttonPlusMoins"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPlusMoins"
         android:text="@string/pm"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -186,11 +200,12 @@
         android:id="@+id/buttonVir"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:onClick="btnVir"
         android:text="@string/vir"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/buttonEgal"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -198,10 +213,11 @@
         android:id="@+id/button1"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn1"
         android:text="@string/_1"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlusMoins"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -209,10 +225,11 @@
         android:id="@+id/button3"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn3"
         android:text="@string/_3"
         app:layout_constraintBottom_toTopOf="@+id/buttonVir"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button2"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -220,11 +237,12 @@
         android:id="@+id/button0"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:onClick="btn0"
         android:text="@string/_0"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonPlusMoins"
         app:layout_constraintRight_toLeftOf="@+id/buttonVir"
         app:layout_constraintWidth_percent="0.25" />
@@ -233,10 +251,11 @@
         android:id="@+id/button7"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn7"
         android:text="@string/_7"
         app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -244,13 +263,14 @@
         android:id="@+id/buttonEgal"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="92dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:background="@android:color/holo_blue_dark"
         android:onClick="btnEgal"
         android:text="@string/ega"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -258,10 +278,11 @@
         android:id="@+id/button4"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn4"
         android:text="@string/_4"
         app:layout_constraintBottom_toTopOf="@+id/button1"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -269,11 +290,12 @@
         android:id="@+id/buttonPlus"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPlus"
         android:text="@string/plu"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonEgal"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button3"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
@@ -282,11 +304,12 @@
         android:id="@+id/buttonMul"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnMul"
         android:text="@string/mul"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonMoins"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button9"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
@@ -295,10 +318,11 @@
         android:id="@+id/button9"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn9"
         android:text="@string/_9"
         app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button8"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -306,10 +330,11 @@
         android:id="@+id/button5"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn5"
         android:text="@string/_5"
         app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button4"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -317,10 +342,11 @@
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn2"
         android:text="@string/_2"
         app:layout_constraintBottom_toTopOf="@+id/button0"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button1"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -328,12 +354,13 @@
         android:id="@+id/buttonMoins"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:onClick="btnMoins"
         android:text="@string/moi"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button6"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
