--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,17 +11,18 @@
     <TextView
         android:id="@+id/textCalc"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="top"
         android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintHeight_percent="0.10"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/guideline7" />
 
     <TextView
         android:id="@+id/textResult"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="right"
         android:paddingRight="32dp"
         android:text="@string/result"
@@ -29,6 +30,7 @@
         android:textStyle="bold|italic"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -36,12 +38,13 @@
         android:id="@+id/buttonHisto"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:onClick="btnHisto"
         android:text="@string/historique"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/buttonC"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.30" />
 
@@ -49,12 +52,13 @@
         android:id="@+id/buttonGraph"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:onClick="btnGraph"
         android:text="@string/graphique"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintBottom_toTopOf="@+id/buttonPar"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonHisto"
         app:layout_constraintWidth_percent="0.30" />
 
@@ -62,10 +66,11 @@
         android:id="@+id/btnVoice"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnVoice"
         android:tint="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonPour"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonGraph"
         app:layout_constraintRight_toLeftOf="@+id/btnCamera"
         app:layout_constraintWidth_percent="0.10"
@@ -75,10 +80,11 @@
         android:id="@+id/btnCamera"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnCam"
         android:tint="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonPour"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/btnVoice"
         app:layout_constraintRight_toLeftOf="@+id/buttonDelete"
         app:layout_constraintWidth_percent="0.10"
@@ -88,11 +94,12 @@
         android:id="@+id/buttonDelete"
         style="@android:style/Widget.DeviceDefault.Light.ImageButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:longClickable="false"
         android:onClick="btnDelete"
         android:tint="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonDiv"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.20"
         app:srcCompat="@android:drawable/ic_input_delete" />
@@ -102,12 +109,13 @@
         android:id="@+id/buttonC"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginLeft="2dp"
         android:onClick="btnC"
         android:text="@string/c"
         android:textColor="@android:color/holo_red_dark"
         app:layout_constraintBottom_toTopOf="@+id/button7"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -115,11 +123,12 @@
         android:id="@+id/buttonPar"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPar"
         android:text="@string/para"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/button8"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonC"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -127,11 +136,12 @@
         android:id="@+id/buttonPour"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPour"
         android:text="@string/pou"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/button9"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonPar"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -139,11 +149,12 @@
         android:id="@+id/buttonDiv"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnDiv"
         android:text="@string/div"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonMul"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonPour"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
@@ -152,10 +163,11 @@
         android:id="@+id/button8"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn8"
         android:text="@string/_8"
         app:layout_constraintBottom_toTopOf="@+id/button5"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button7"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -163,10 +175,11 @@
         android:id="@+id/button6"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn6"
         android:text="@string/_6"
         app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button5"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -174,10 +187,11 @@
         android:id="@+id/buttonPlusMoins"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPlusMoins"
         android:text="@string/pm"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -185,11 +199,12 @@
         android:id="@+id/buttonVir"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:onClick="btnVir"
         android:text="@string/vir"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/buttonEgal"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -197,10 +212,11 @@
         android:id="@+id/button1"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn1"
         android:text="@string/_1"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlusMoins"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -208,10 +224,11 @@
         android:id="@+id/button3"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn3"
         android:text="@string/_3"
         app:layout_constraintBottom_toTopOf="@+id/buttonVir"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button2"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -219,11 +236,12 @@
         android:id="@+id/button0"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:onClick="btn0"
         android:text="@string/_0"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/buttonPlusMoins"
         app:layout_constraintRight_toLeftOf="@+id/buttonVir"
         app:layout_constraintWidth_percent="0.25" />
@@ -232,10 +250,11 @@
         android:id="@+id/button7"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn7"
         android:text="@string/_7"
         app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -243,13 +262,14 @@
         android:id="@+id/buttonEgal"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="92dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:background="@android:color/holo_blue_dark"
         android:onClick="btnEgal"
         android:text="@string/ega"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -257,10 +277,11 @@
         android:id="@+id/button4"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn4"
         android:text="@string/_4"
         app:layout_constraintBottom_toTopOf="@+id/button1"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/guideline3"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -268,11 +289,12 @@
         android:id="@+id/buttonPlus"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnPlus"
         android:text="@string/plu"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonEgal"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button3"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
@@ -281,11 +303,12 @@
         android:id="@+id/buttonMul"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btnMul"
         android:text="@string/mul"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonMoins"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button9"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
@@ -294,10 +317,11 @@
         android:id="@+id/button9"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn9"
         android:text="@string/_9"
         app:layout_constraintBottom_toTopOf="@+id/button6"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button8"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -305,10 +329,11 @@
         android:id="@+id/button5"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn5"
         android:text="@string/_5"
         app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button4"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -316,10 +341,11 @@
         android:id="@+id/button2"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:onClick="btn2"
         android:text="@string/_2"
         app:layout_constraintBottom_toTopOf="@+id/button0"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button1"
         app:layout_constraintWidth_percent="0.25" />
 
@@ -327,12 +353,13 @@
         android:id="@+id/buttonMoins"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="bottom"
         android:onClick="btnMoins"
         android:text="@string/moi"
         android:textColor="@android:color/holo_blue_dark"
         app:layout_constraintBottom_toTopOf="@+id/buttonPlus"
+        app:layout_constraintHeight_percent="0.07"
         app:layout_constraintLeft_toRightOf="@+id/button6"
         app:layout_constraintRight_toLeftOf="@+id/guideline2"
         app:layout_constraintWidth_percent="0.25" />
